A whole tonne of styling changes, fix dark mode/light mode. Create a more striking frontpage

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 .App {
   text-align: center;
-  background-color: #212121;
   min-height: 100vh;
   flex-direction: column;
   justify-content: safe center;
-  color: white;
   display: inline-flex;
   width: 100%;
   minWidth: 100%;
